--- a/templates/parametres.html
+++ b/templates/parametres.html
@@ -5,6 +5,11 @@
 {% block content %}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Paramètres</h1>
+    <div class="btn-group" role="group">
+        <a href="{{ url_for('gestion_utilisateurs') }}" class="btn btn-outline-primary">
+            <i class="fas fa-users"></i> Gestion Utilisateurs
+        </a>
+    </div>
 </div>
 
 <div class="row justify-content-center">
