--- a/templates/ajouter_piece.html
+++ b/templates/ajouter_piece.html
@@ -36,33 +36,6 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="mb-3">
-                                    <label for="modele" class="form-label">Modèle</label>
-                                    <input type="text" class="form-control" id="modele" name="modele">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="mb-3">
-                                    <label for="categorie" class="form-label">Catégorie</label>
-                                    <select class="form-select" id="categorie" name="categorie">
-                                        <option value="">Sélectionner une catégorie</option>
-                                        <option value="Moteur">Moteur</option>
-                                        <option value="Transmission">Transmission</option>
-                                        <option value="Freinage">Freinage</option>
-                                        <option value="Suspension">Suspension</option>
-                                        <option value="Électricité">Électricité</option>
-                                        <option value="Hydraulique">Hydraulique</option>
-                                        <option value="Pneumatique">Pneumatique</option>
-                                        <option value="Filtres">Filtres</option>
-                                        <option value="Lubrifiants">Lubrifiants</option>
-                                        <option value="Autre">Autre</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="mb-3">
                                     <label for="fournisseur" class="form-label">Fournisseur</label>
                                     <input type="text" class="form-control" id="fournisseur" name="fournisseur">
                                 </div>
@@ -70,22 +43,28 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <div class="mb-3">
                                     <label for="prix_unitaire" class="form-label">Prix unitaire (€)</label>
                                     <input type="number" step="0.01" class="form-control" id="prix_unitaire" name="prix_unitaire">
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <div class="mb-3">
                                     <label for="stock_minimum" class="form-label">Stock minimum</label>
                                     <input type="number" class="form-control" id="stock_minimum" name="stock_minimum" value="{% if piece %}{{ piece.stock_mini }}{% else %}0{% endif %}">
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-3">
                                 <div class="mb-3">
                                     <label for="stock_actuel" class="form-label">Stock actuel</label>
                                     <input type="number" class="form-control" id="stock_actuel" name="stock_actuel" value="{% if piece %}{{ piece.quantite_stock }}{% else %}0{% endif %}">
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="mb-3">
+                                    <label for="stock_maxi" class="form-label">Stock maxi</label>
+                                    <input type="number" class="form-control" id="stock_maxi" name="stock_maxi" value="{% if piece %}{{ piece.stock_maxi }}{% else %}0{% endif %}">
                                 </div>
                             </div>
                         </div>
