--- a/templates/maintenances.html
+++ b/templates/maintenances.html
@@ -6,8 +6,8 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Maintenances</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
-        <a href="{{ url_for('ajouter_maintenance') }}" class="btn btn-primary">
-            <i class="fas fa-plus"></i> Ajouter une maintenance
+        <a href="{{ url_for('ajouter_maintenance') }}" class="btn btn-outline-primary" title="Ajouter une maintenance">
+            <i class="fas fa-plus"></i>
         </a>
     </div>
 </div>
