--- a/templates/pieces.html
+++ b/templates/pieces.html
@@ -6,11 +6,11 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Pièces de rechange</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
-        <a href="{{ url_for('ajouter_piece') }}" class="btn btn-primary">
-            <i class="fas fa-plus"></i> Ajouter une pièce
+        <a href="{{ url_for('ajouter_piece') }}" class="btn btn-outline-primary" title="Ajouter une pièce">
+            <i class="fas fa-plus"></i>
         </a>
-        <button type="button" class="btn btn-danger ms-2" data-bs-toggle="modal" data-bs-target="#viderDonneesModal">
-            <i class="fas fa-trash-alt"></i> Vider les pièces
+        <button type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="modal" data-bs-target="#viderDonneesModal" title="Vider les pièces">
+            <i class="fas fa-trash"></i>
         </button>
     </div>
 </div>
